--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://samuxmin.github.io/heroes/",
+  "homepage": "http://samuxmin.github.io/heroes",
   "name": "heroes-app",
   "version": "0.1.0",
   "private": true,
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -r https://$GH_TOKEN@github.com/samuxmin/heroes"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
