--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://samuxmin.github.io/heroes",
   "name": "heroes-app",
   "version": "0.1.0",
   "private": true,
@@ -42,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
+    "enzyme-to-json": "^3.6.2",
     "gh-pages": "^3.2.3"
   }
 }
